apps/hello-microshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-microshift
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-microshift
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-microshift
    spec:
      containers:
      - name: hello-microshift
        image: quay.io/microshift/hello-microshift:latest
        imagePullPolicy: IfNotPresent
        ports:
         - containerPort: 8080
           protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
