apps/hello-microshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-microshift
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: hello-microshift
  type: ClusterIP
